monitoring-logging/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - monitoring.trurep.testing.emulya.com
    secretName: monitoring-tls
  rules:
  - host: monitoring.trurep.testing.emulya.com
    http:
      paths:
      - path: /
        backend:
          serviceName: loki-grafana
          servicePort: 80
